feat: add get deposit record for main account

--- a/.env.example
+++ b/.env.example
@@ -8,8 +8,15 @@
 # API 配置 (必需)
 # =============================================================================
 # 从币安官网获取API密钥: https://www.binance.com/cn/my/settings/api-management
+
+# 主账户API配置（用于获取充值提现记录）
 BINANCE_API_KEY=your_binance_api_key_here
 BINANCE_SECRET_KEY=your_binance_secret_key_here
+
+# 带单项目API配置（用于获取交易记录）
+# 如果主账户API可以获取所有数据，则可以留空
+BINANCE_COPYTRADE_API_KEY=
+BINANCE_COPYTRADE_SECRET_KEY=
 
 # =============================================================================
 # 环境设置
